k8s/02-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: poly-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: poly-k8/frontend:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "50m"
            memory: "32Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-dep
  namespace: poly-k8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: poly-k8/api-gateway:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
  namespace: poly-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-svc
  template:
    metadata:
      labels:
        app: auth-svc
    spec:
      containers:
      - name: auth-svc
        image: poly-k8/auth-svc:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-dep
  namespace: poly-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-svc
  template:
    metadata:
      labels:
        app: analytics-svc
    spec:
      containers:
      - name: analytics-svc
        image: poly-k8/analytics-svc:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
            memory: "64Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-dep
  namespace: poly-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor-svc
  template:
    metadata:
      labels:
        app: processor-svc
    spec:
      containers:
      - name: processor-svc
        image: poly-k8/processor-svc:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
