k8s/03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: poly-k8
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: poly-k8
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: poly-k8
spec:
  type: ClusterIP
  selector:
    app: auth-svc
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-svc
  namespace: poly-k8
spec:
  type: ClusterIP
  selector:
    app: analytics-svc
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: processor-svc
  namespace: poly-k8
spec:
  type: ClusterIP
  selector:
    app: processor-svc
  ports:
  - port: 8080
    targetPort: 8080
